--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>TXT 报课咨询记录管理</title>
+<title>TXT 报课记录管理（邮箱白名单登录）</title>
 <style>
   body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;background:#f7f7f7;color:#111}
   .wrap{max-width:1000px;margin:24px auto;padding:0 16px}
@@ -24,12 +24,15 @@
 </head>
 <body>
 <div class="wrap">
+
   <!-- 登录卡片 -->
   <div id="login" class="card">
-    <h1>管理员登录</h1>
+    <h1>管理员登录（邮箱白名单）</h1>
+    <div class="muted" style="margin:6px 0 10px">
+      请输入被授权登录的邮箱。后端校验通过后将发放临时口令（12 小时有效）。
+    </div>
     <div style="display:flex;gap:8px;flex-wrap:wrap">
-      <input id="u" placeholder="用户名" />
-      <input id="p" type="password" placeholder="密码" />
+      <input id="email" type="email" placeholder="name@company.com" />
       <button class="btn" onclick="login()">登录</button>
     </div>
     <div id="msg" class="muted" style="margin-top:8px"></div>
@@ -41,6 +44,7 @@
       <h1>报课记录</h1>
       <div style="display:flex;gap:8px">
         <button class="btn" onclick="loadList()">刷新</button>
+        <button class="btn red" onclick="logout()">退出</button>
       </div>
     </div>
     <div id="list"></div>
@@ -48,116 +52,119 @@
 </div>
 
 <script>
-// ====== Apps Script /exec 地址（保持你的现有地址即可） ======
+/* ============ 配置 ============ */
 const API_URL = 'https://script.google.com/macros/s/AKfycbydo3q4E1OZ8gCcW-yibxuWjj04JzQ3-UyduzmKRKfJQHN4cKjqyF9HXHw8BLYrTvRN/exec';
+const TOKEN_KEY = 'xanadu_admin_token';
 
-/* ---------- 小工具：安全转字符串 ---------- */
-function vstr(x){ return (x===undefined || x===null) ? '' : String(x); }
+/* ============ 工具 ============ */
+function v(x){ return (x===undefined||x===null)?'':String(x); }
+function escapeHTML(s){ return String(s==null?'':s).replace(/[&<>"']/g, c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
+function tokenGet(){ return sessionStorage.getItem(TOKEN_KEY)||''; }
+function tokenSet(t){ sessionStorage.setItem(TOKEN_KEY, t||''); }
+function tokenClear(){ sessionStorage.removeItem(TOKEN_KEY); }
 
-/* ---------- API 封装 ---------- */
-async function apiList(){
-  const url = `${API_URL}?action=list&_=${Date.now()}`;
-  const res = await fetch(url, { method:'GET' });
-  const text = await res.text();
-  if(!res.ok){
-    return { ok:false, error:`HTTP ${res.status}`, raw:text };
-  }
-  try{
-    return JSON.parse(text);
-  }catch(e){
-    return { ok:false, error:'NOT_JSON (接口未返回 JSON，常见是未公开部署或 URL 错误)', raw:text.slice(0,800) };
-  }
-}
-
-async function apiDelete(ticket){
-  const res  = await fetch(API_URL, {
-    method: 'POST',
-    headers: { 'Content-Type':'text/plain;charset=utf-8' },
-    body: JSON.stringify({ action:'delete', ticket })
+/* ============ API 封装 ============ */
+// 登录（邮箱白名单）：POST {action:'auth_email', email}
+async function apiAuthEmail(email){
+  const res = await fetch(API_URL, {
+    method:'POST',
+    headers:{ 'Content-Type':'text/plain;charset=utf-8' },
+    body: JSON.stringify({ action:'auth_email', email })
   });
   const text = await res.text();
-  try{ return JSON.parse(text); }
-  catch{ return { ok:false, error:'NOT_JSON', raw:text.slice(0,800) }; }
+  try{ return JSON.parse(text); }catch{ return { ok:false, error:'NOT_JSON', raw:text }; }
 }
 
-/* ---------- 登录 ---------- */
-function login(){
-  const u=document.getElementById('u').value.trim();
-  const p=document.getElementById('p').value.trim();
-  if(u==='txtadmin' && p==='202412'){
+// 列表：GET /exec?action=list&token=xxx
+async function apiList(token){
+  const url = `${API_URL}?action=list&token=${encodeURIComponent(token)}&_=${Date.now()}`;
+  const res = await fetch(url, { method:'GET' });
+  const text = await res.text();
+  if(!res.ok) return { ok:false, error:`HTTP ${res.status}`, raw:text };
+  try{ return JSON.parse(text); }catch{ return { ok:false, error:'NOT_JSON', raw:text }; }
+}
+
+// 删除：POST {action:'delete', ticket, token}
+async function apiDelete(ticket, token){
+  const res = await fetch(API_URL, {
+    method:'POST',
+    headers:{ 'Content-Type':'text/plain;charset=utf-8' },
+    body: JSON.stringify({ action:'delete', ticket, token })
+  });
+  const text = await res.text();
+  try{ return JSON.parse(text); }catch{ return { ok:false, error:'NOT_JSON', raw:text }; }
+}
+
+/* ============ 登录 / 退出 ============ */
+async function login(){
+  const email = document.getElementById('email').value.trim().toLowerCase();
+  document.getElementById('msg').textContent = '登录中…';
+  if(!email){ document.getElementById('msg').textContent='请输入邮箱'; return; }
+
+  try{
+    const j = await apiAuthEmail(email);
+    if(!j.ok){ document.getElementById('msg').textContent = '授权失败：' + (j.error||''); return; }
+    tokenSet(j.token||'');
     document.getElementById('login').style.display='none';
     document.getElementById('panel').style.display='block';
     loadList();
-  }else{
-    document.getElementById('msg').textContent='授权失败';
+  }catch(err){
+    document.getElementById('msg').textContent = '网络异常：' + String(err);
   }
 }
 
-/* ---------- 渲染列表 ---------- */
+function logout(){
+  tokenClear();
+  document.getElementById('panel').style.display='none';
+  document.getElementById('login').style.display='block';
+  document.getElementById('msg').textContent = '';
+}
+
+/* ============ 列表渲染 ============ */
 async function loadList(){
+  const token = tokenGet();
   const box = document.getElementById('list');
   box.innerHTML = '<div class="card">加载中…</div>';
 
-  try{
-    const j = await apiList();
+  if(!token){ box.innerHTML = '<div class="card">未登录或口令失效，请重新登录。</div>'; logout(); return; }
 
+  try{
+    const j = await apiList(token);
     if(!j.ok){
-      box.innerHTML = `
-        <div class="card">
-          <div><b>读取失败：</b>${escapeHTML(j.error||'')}</div>
-          ${j.raw ? `<div class="err" style="margin-top:8px">${escapeHTML(j.raw)}</div>` : ''}
-        </div>`;
-      console.error('list error:', j);
+      if(String(j.error||'').includes('AUTH')){ box.innerHTML = '<div class="card">口令无效/过期，请重新登录。</div>'; logout(); return; }
+      box.innerHTML = `<div class="card"><div><b>读取失败：</b>${escapeHTML(j.error||'')}</div>${j.raw?('<div class="err" style="margin-top:8px">'+escapeHTML(j.raw)+'</div>'):''}</div>`;
       return;
     }
 
-    const list = Array.isArray(j.data)? j.data : [];
-
-    // 疑重：同姓名 +（同微信 或 同邮箱）
-    const seen = new Map();
+    const list = Array.isArray(j.data) ? j.data : [];
+    const seen = new Map(); // 疑重
     for(const r of list){
-      const k1 = `${vstr(r.name).trim()}|${vstr(r.wechat).trim()}`;
-      const k2 = `${vstr(r.name).trim()}|${vstr(r.email).trim()}`;
-      seen.set(k1, (seen.get(k1)||0)+1);
-      seen.set(k2, (seen.get(k2)||0)+1);
+      const k1 = `${v(r.name).trim()}|${v(r.wechat).trim()}`;
+      const k2 = `${v(r.name).trim()}|${v(r.email).trim()}`;
+      seen.set(k1,(seen.get(k1)||0)+1);
+      seen.set(k2,(seen.get(k2)||0)+1);
     }
-
-    // 按时间倒序
-    const sorted = list.slice().sort((a,b)=>{
-      const ta = new Date(vstr(a.ts)).getTime() || 0;
-      const tb = new Date(vstr(b.ts)).getTime() || 0;
-      return tb - ta;
-    });
+    const sorted = list.slice().sort((a,b)=> (new Date(v(b.ts)).getTime()||0) - (new Date(v(a.ts)).getTime()||0));
 
     const html = sorted.map(r=>{
-      const name   = vstr(r.name).trim();
-      const wechat = vstr(r.wechat).trim();
-      const email  = vstr(r.email).trim();
-      const phone  = vstr(r.phone).trim();
-      const best   = vstr(r.best);
-      const notes  = vstr(r.notes);
-      const detail = vstr(r.detail);
-      const ticket = vstr(r.ticket);
-      const suspected = (seen.get(`${name}|${wechat}`)>1) || (seen.get(`${name}|${email}`)>1);
-      const ts = r.ts ? new Date(vstr(r.ts)).toLocaleString() : '';
-
+      const name=v(r.name).trim(), we=v(r.wechat).trim(), em=v(r.email).trim();
+      const suspected = (seen.get(`${name}|${we}`)>1) || (seen.get(`${name}|${em}`)>1);
+      const ticket=v(r.ticket);
+      const ts = r.ts ? new Date(v(r.ts)).toLocaleString() : '';
       return `
       <div class="card">
         <div class="rowhead">
-          <div>
-            <b>咨询号码：</b>${escapeHTML(ticket)}
-            ${suspected?'<span class="badge">疑重</span>':''}
-          </div>
+          <div><b>咨询号码：</b>${escapeHTML(ticket)}${suspected?'<span class="badge">疑重</span>':''}</div>
           <button class="btn red" onclick="confirmDelete('${escapeHTML(ticket)}')">删除</button>
         </div>
         <table>
           <tr><th>客户姓名</th><td>${escapeHTML(name)}</td></tr>
-          <tr><th>微信号</th><td>${escapeHTML(wechat || 'n/a')}</td></tr>
-          <tr><th>邮箱</th><td>${escapeHTML(email)}</td></tr>
-          <tr><th>电话</th><td>${escapeHTML(phone)}</td></tr>
-          <tr><th>最佳匹配推荐</th><td>${escapeHTML(best)}</td></tr>
-          <tr><th>备注</th><td>${escapeHTML(notes)}</td></tr>
-          <tr><th>报课详细选项</th><td>${escapeHTML(detail)}</td></tr>
+          <tr><th>微信号</th><td>${escapeHTML(we||'n/a')}</td></tr>
+          <tr><th>邮箱</th><td>${escapeHTML(em)}</td></tr>
+          <tr><th>电话</th><td>${escapeHTML(v(r.phone))}</td></tr>
+          <tr><th>最佳匹配推荐</th><td>${escapeHTML(v(r.best))}</td></tr>
+          <tr><th>备注</th><td>${escapeHTML(v(r.notes))}</td></tr>
+          <tr><th>报课详细选项</th><td>${escapeHTML(v(r.detail))}</td></tr>
           <tr><th>时间</th><td class="muted">${escapeHTML(ts)}</td></tr>
         </table>
       </div>`;
@@ -165,36 +172,39 @@ async function loadList(){
 
     box.innerHTML = html || '<div class="card">暂无记录</div>';
   }catch(err){
-    console.error(err);
     box.innerHTML = `<div class="card err">网络异常或接口错误：\n${escapeHTML(String(err))}</div>`;
   }
 }
 
-/* ---------- 删除确认 ---------- */
+/* ============ 删除 ============ */
 async function confirmDelete(ticket){
   const phrase = prompt('请再次确认是否删除该条记录？\n输入【确认删除】以继续，或点取消退出。');
   if(phrase===null) return;
   if(phrase.trim()!=='确认删除'){ alert('口令不正确，已取消删除。'); return; }
+
+  const token = tokenGet();
+  if(!token){ alert('未登录或口令失效，请重新登录。'); logout(); return; }
+
   try{
-    const j = await apiDelete(ticket);
+    const j = await apiDelete(ticket, token);
     if(!j.ok){
-      alert('删除失败：' + (j.error||''));
-      console.error('delete error:', j);
-      return;
+      if(String(j.error||'').includes('AUTH')){ alert('口令无效或已过期，请重新登录。'); logout(); return; }
+      alert('删除失败：' + (j.error||'')); return;
     }
     loadList();
   }catch(err){
-    console.error(err);
     alert('网络异常，删除失败');
   }
 }
 
-/* ---------- HTML 转义 ---------- */
-function escapeHTML(s){
-  return String(s==null?'':s).replace(/[&<>"']/g, c=>({
-    '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'
-  }[c]));
-}
+/* ============ 初始化 ============ */
+(function init(){
+  if(tokenGet()){
+    document.getElementById('login').style.display='none';
+    document.getElementById('panel').style.display='block';
+    loadList();
+  }
+})();
 </script>
 </body>
 </html>
