--- a/admin.html
+++ b/admin.html
@@ -3,13 +3,12 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>TXT 报课记录管理（邮箱白名单登录）</title>
+<title>TXT 报课记录管理（邮箱白名单）</title>
 <style>
   body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial;background:#f7f7f7;color:#111}
   .wrap{max-width:1000px;margin:24px auto;padding:0 16px}
   .card{background:#fff;border:1px solid #e5e7eb;border-radius:12px;box-shadow:0 4px 14px #0000000d;padding:16px;margin-bottom:16px}
   h1{margin:0 0 10px}
-  input{padding:10px 12px;border:1px solid #e5e7eb;border-radius:10px}
   .btn{padding:10px 14px;border:none;border-radius:10px;background:#0f766e;color:#fff;cursor:pointer}
   .btn.red{background:#dc2626}
   .header{display:flex;justify-content:space-between;align-items:center;margin-bottom:12px}
@@ -20,6 +19,7 @@
   .rowhead{display:flex;justify-content:space-between;align-items:center;margin-bottom:8px}
   .badge{display:inline-block;padding:2px 8px;border-radius:999px;background:#fee2e2;color:#991b1b;font-size:12px;margin-left:8px}
   .err{white-space:pre-wrap;font-family:ui-monospace,SFMono-Regular,Consolas,monospace}
+  .google{margin-top:8px}
 </style>
 </head>
 <body>
@@ -28,13 +28,8 @@
   <!-- 登录卡片 -->
   <div id="login" class="card">
     <h1>管理员登录（邮箱白名单）</h1>
-    <div class="muted" style="margin:6px 0 10px">
-      请输入被授权登录的邮箱。后端校验通过后将发放临时口令（12 小时有效）。
-    </div>
-    <div style="display:flex;gap:8px;flex-wrap:wrap">
-      <input id="email" type="email" placeholder="name@company.com" />
-      <button class="btn" onclick="login()">登录</button>
-    </div>
+    <div class="muted">请使用<strong>被授权的 Google 账号</strong>登录。</div>
+    <div id="gbtn" class="google"></div>
     <div id="msg" class="muted" style="margin-top:8px"></div>
   </div>
 
@@ -49,62 +44,89 @@
     </div>
     <div id="list"></div>
   </div>
+
 </div>
+
+<!-- Google Identity Services -->
+<script src="https://accounts.google.com/gsi/client" async defer></script>
 
 <script>
 /* ============ 配置 ============ */
-const API_URL = 'https://script.google.com/macros/s/AKfycbydo3q4E1OZ8gCcW-yibxuWjj04JzQ3-UyduzmKRKfJQHN4cKjqyF9HXHw8BLYrTvRN/exec';
-const TOKEN_KEY = 'xanadu_admin_token';
+// Apps Script /exec 地址
+const API_URL = 'https://script.google.com/macros/s/AKfycbwhczC9_lT3dp2Lk61Rg8Outz_rh9qsxMbj7G7PWrbz3oFemaNQXe9k4rsL-5UTcMQg/exec'; // ← 替换成你的
+// 你的 Google OAuth Web Client ID（要和 Apps Script 里的常量一致）
+const GOOGLE_CLIENT_ID = '126117723960-3gdibqblicp6ncc0jiuv9pu8frgmhs5n.apps.googleusercontent.com'; // ← 替换成你的
+// 会话存储 key
+const SESSION_KEY = 'txt_admin_session';
 
-/* ============ 工具 ============ */
-function v(x){ return (x===undefined||x===null)?'':String(x); }
-function escapeHTML(s){ return String(s==null?'':s).replace(/[&<>"']/g, c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
-function tokenGet(){ return sessionStorage.getItem(TOKEN_KEY)||''; }
-function tokenSet(t){ sessionStorage.setItem(TOKEN_KEY, t||''); }
-function tokenClear(){ sessionStorage.removeItem(TOKEN_KEY); }
+/* ============ 小工具 ============ */
+function esc(s){ return String(s==null?'':s).replace(/[&<>"']/g,c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])) }
+function getSession(){ return sessionStorage.getItem(SESSION_KEY) || ''; }
+function setSession(v){ sessionStorage.setItem(SESSION_KEY, v||''); }
+function clearSession(){ sessionStorage.removeItem(SESSION_KEY); }
 
-/* ============ API 封装 ============ */
-// 登录（邮箱白名单）：POST {action:'auth_email', email}
-async function apiAuthEmail(email){
+/* ============ API ============ */
+async function apiSignin(id_token){
+  const res = await fetch(API_URL, {
+    method:'POST',
+    headers:{ 'Content-Type':'text/plain;charset=utf-8' }, // 避免预检
+    body: JSON.stringify({ action:'signin', id_token })
+  });
+  const text = await res.text();
+  try{ return JSON.parse(text); }catch{ return { ok:false, error:'NOT_JSON', raw:text }; }
+}
+async function apiList(session){
   const res = await fetch(API_URL, {
     method:'POST',
     headers:{ 'Content-Type':'text/plain;charset=utf-8' },
-    body: JSON.stringify({ action:'auth_email', email })
+    body: JSON.stringify({ action:'list', session })
+  });
+  const text = await res.text();
+  try{ return JSON.parse(text); }catch{ return { ok:false, error:'NOT_JSON', raw:text }; }
+}
+async function apiDelete(session, ticket){
+  const res = await fetch(API_URL, {
+    method:'POST',
+    headers:{ 'Content-Type':'text/plain;charset=utf-8' },
+    body: JSON.stringify({ action:'delete', session, ticket })
   });
   const text = await res.text();
   try{ return JSON.parse(text); }catch{ return { ok:false, error:'NOT_JSON', raw:text }; }
 }
 
-// 列表：GET /exec?action=list&token=xxx
-async function apiList(token){
-  const url = `${API_URL}?action=list&token=${encodeURIComponent(token)}&_=${Date.now()}`;
-  const res = await fetch(url, { method:'GET' });
-  const text = await res.text();
-  if(!res.ok) return { ok:false, error:`HTTP ${res.status}`, raw:text };
-  try{ return JSON.parse(text); }catch{ return { ok:false, error:'NOT_JSON', raw:text }; }
-}
-
-// 删除：POST {action:'delete', ticket, token}
-async function apiDelete(ticket, token){
-  const res = await fetch(API_URL, {
-    method:'POST',
-    headers:{ 'Content-Type':'text/plain;charset=utf-8' },
-    body: JSON.stringify({ action:'delete', ticket, token })
+/* ============ 登录 ============ */
+window.onload = function(){
+  // 渲染 Google 登录按钮
+  window.google?.accounts.id.initialize({
+    client_id: GOOGLE_CLIENT_ID,
+    callback: onGoogleCredential,
+    ux_mode: 'popup'
   });
-  const text = await res.text();
-  try{ return JSON.parse(text); }catch{ return { ok:false, error:'NOT_JSON', raw:text }; }
-}
+  window.google?.accounts.id.renderButton(
+    document.getElementById('gbtn'),
+    { theme: 'outline', size: 'large', text: 'signin_with' }
+  );
 
-/* ============ 登录 / 退出 ============ */
-async function login(){
-  const email = document.getElementById('email').value.trim().toLowerCase();
-  document.getElementById('msg').textContent = '登录中…';
-  if(!email){ document.getElementById('msg').textContent='请输入邮箱'; return; }
+  // 如果已存在会话，尝试直接进入
+  if(getSession()){
+    document.getElementById('panel').style.display='block';
+    loadList();
+  }else{
+    document.getElementById('login').style.display='block';
+  }
+};
 
+// Google 回调：拿到 id_token
+async function onGoogleCredential(resp){
+  const id_token = resp.credential;
+  document.getElementById('msg').textContent = '正在验证…';
   try{
-    const j = await apiAuthEmail(email);
-    if(!j.ok){ document.getElementById('msg').textContent = '授权失败：' + (j.error||''); return; }
-    tokenSet(j.token||'');
+    const j = await apiSignin(id_token);
+    if(!j.ok){
+      document.getElementById('msg').textContent = '授权失败：' + (j.error||'');
+      return;
+    }
+    setSession(j.session);
     document.getElementById('login').style.display='none';
     document.getElementById('panel').style.display='block';
     loadList();
@@ -114,79 +136,89 @@ async function login(){
 }
 
 function logout(){
-  tokenClear();
+  clearSession();
   document.getElementById('panel').style.display='none';
   document.getElementById('login').style.display='block';
   document.getElementById('msg').textContent = '';
 }
 
-/* ============ 列表渲染 ============ */
+/* ============ 列表 / 删除 ============ */
 async function loadList(){
-  const token = tokenGet();
+  const session = getSession();
   const box = document.getElementById('list');
   box.innerHTML = '<div class="card">加载中…</div>';
-
-  if(!token){ box.innerHTML = '<div class="card">未登录或口令失效，请重新登录。</div>'; logout(); return; }
+  if(!session){
+    box.innerHTML = '<div class="card">未登录或口令失效，请重新登录。</div>';
+    logout(); return;
+  }
 
   try{
-    const j = await apiList(token);
+    const j = await apiList(session);
     if(!j.ok){
-      if(String(j.error||'').includes('AUTH')){ box.innerHTML = '<div class="card">口令无效/过期，请重新登录。</div>'; logout(); return; }
-      box.innerHTML = `<div class="card"><div><b>读取失败：</b>${escapeHTML(j.error||'')}</div>${j.raw?('<div class="err" style="margin-top:8px">'+escapeHTML(j.raw)+'</div>'):''}</div>`;
+      if(String(j.error||'').includes('AUTH')){
+        box.innerHTML = '<div class="card">口令无效或已过期，请重新登录。</div>';
+        logout(); return;
+      }
+      box.innerHTML = `<div class="card"><div><b>读取失败：</b>${esc(j.error||'')}</div>${j.raw?`<div class="err" style="margin-top:8px">${esc(j.raw)}</div>`:''}</div>`;
       return;
     }
 
-    const list = Array.isArray(j.data) ? j.data : [];
-    const seen = new Map(); // 疑重
+    const list = Array.isArray(j.data)? j.data : [];
+    // 疑重标记
+    const seen = new Map();
     for(const r of list){
-      const k1 = `${v(r.name).trim()}|${v(r.wechat).trim()}`;
-      const k2 = `${v(r.name).trim()}|${v(r.email).trim()}`;
-      seen.set(k1,(seen.get(k1)||0)+1);
-      seen.set(k2,(seen.get(k2)||0)+1);
+      const name=(r.name||'').trim(), wc=(r.wechat||'').trim(), em=(r.email||'').trim();
+      seen.set(`${name}|${wc}`,(seen.get(`${name}|${wc}`)||0)+1);
+      seen.set(`${name}|${em}`,(seen.get(`${name}|${em}`)||0)+1);
     }
-    const sorted = list.slice().sort((a,b)=> (new Date(v(b.ts)).getTime()||0) - (new Date(v(a.ts)).getTime()||0));
+
+    const sorted = list.slice().sort((a,b)=>{
+      const ta = new Date(a.ts||0).getTime()||0;
+      const tb = new Date(b.ts||0).getTime()||0;
+      return tb-ta;
+    });
 
     const html = sorted.map(r=>{
-      const name=v(r.name).trim(), we=v(r.wechat).trim(), em=v(r.email).trim();
-      const suspected = (seen.get(`${name}|${we}`)>1) || (seen.get(`${name}|${em}`)>1);
-      const ticket=v(r.ticket);
-      const ts = r.ts ? new Date(v(r.ts)).toLocaleString() : '';
+      const name=esc(r.name||''), wc=esc(r.wechat||'n/a'), em=esc(r.email||''), ph=esc(r.phone||'');
+      const best=esc(r.best||''), notes=esc(r.notes||''), detail=esc(r.detail||'');
+      const ticket=esc(r.ticket||'');
+      const suspected = (seen.get(`${(r.name||'').trim()}|${(r.wechat||'').trim()}`)>1) || (seen.get(`${(r.name||'').trim()}|${(r.email||'').trim()}`)>1);
+      const ts = r.ts ? new Date(r.ts).toLocaleString() : '';
       return `
-      <div class="card">
-        <div class="rowhead">
-          <div><b>咨询号码：</b>${escapeHTML(ticket)}${suspected?'<span class="badge">疑重</span>':''}</div>
-          <button class="btn red" onclick="confirmDelete('${escapeHTML(ticket)}')">删除</button>
-        </div>
-        <table>
-          <tr><th>客户姓名</th><td>${escapeHTML(name)}</td></tr>
-          <tr><th>微信号</th><td>${escapeHTML(we||'n/a')}</td></tr>
-          <tr><th>邮箱</th><td>${escapeHTML(em)}</td></tr>
-          <tr><th>电话</th><td>${escapeHTML(v(r.phone))}</td></tr>
-          <tr><th>最佳匹配推荐</th><td>${escapeHTML(v(r.best))}</td></tr>
-          <tr><th>备注</th><td>${escapeHTML(v(r.notes))}</td></tr>
-          <tr><th>报课详细选项</th><td>${escapeHTML(v(r.detail))}</td></tr>
-          <tr><th>时间</th><td class="muted">${escapeHTML(ts)}</td></tr>
-        </table>
-      </div>`;
+        <div class="card">
+          <div class="rowhead">
+            <div><b>咨询号码：</b>${ticket}${suspected?'<span class="badge">疑重</span>':''}</div>
+            <button class="btn red" onclick="confirmDelete('${ticket}')">删除</button>
+          </div>
+          <table>
+            <tr><th>客户姓名</th><td>${name}</td></tr>
+            <tr><th>微信号</th><td>${wc}</td></tr>
+            <tr><th>邮箱</th><td>${em}</td></tr>
+            <tr><th>电话</th><td>${ph}</td></tr>
+            <tr><th>最佳匹配推荐</th><td>${best}</td></tr>
+            <tr><th>备注</th><td>${notes}</td></tr>
+            <tr><th>报课详细选项</th><td>${detail}</td></tr>
+            <tr><th>时间</th><td class="muted">${esc(ts)}</td></tr>
+          </table>
+        </div>`;
     }).join('');
-
     box.innerHTML = html || '<div class="card">暂无记录</div>';
+
   }catch(err){
-    box.innerHTML = `<div class="card err">网络异常或接口错误：\n${escapeHTML(String(err))}</div>`;
+    document.getElementById('list').innerHTML = `<div class="card err">网络异常或接口错误：\n${esc(String(err))}</div>`;
   }
 }
 
-/* ============ 删除 ============ */
 async function confirmDelete(ticket){
   const phrase = prompt('请再次确认是否删除该条记录？\n输入【确认删除】以继续，或点取消退出。');
   if(phrase===null) return;
   if(phrase.trim()!=='确认删除'){ alert('口令不正确，已取消删除。'); return; }
 
-  const token = tokenGet();
-  if(!token){ alert('未登录或口令失效，请重新登录。'); logout(); return; }
+  const session = getSession();
+  if(!session){ alert('未登录或口令失效，请重新登录。'); logout(); return; }
 
   try{
-    const j = await apiDelete(ticket, token);
+    const j = await apiDelete(session, ticket);
     if(!j.ok){
       if(String(j.error||'').includes('AUTH')){ alert('口令无效或已过期，请重新登录。'); logout(); return; }
       alert('删除失败：' + (j.error||'')); return;
@@ -196,15 +228,6 @@ async function confirmDelete(ticket){
     alert('网络异常，删除失败');
   }
 }
-
-/* ============ 初始化 ============ */
-(function init(){
-  if(tokenGet()){
-    document.getElementById('login').style.display='none';
-    document.getElementById('panel').style.display='block';
-    loadList();
-  }
-})();
 </script>
 </body>
 </html>
